# Changelog

## To Do

*   Check for NA/NaN/Inf in the input matrices.

*   PyPI build for Python 3.14


## 1.2.0 (2025-07-24)

*   [Python and R] Using the new implementation of Euclidean and mutual
    reachability minimum spanning trees (quite fast in low dimensional spaces)
    from the [`quitefastmst`](https://quitefastmst.gagolewski.com/) package.

*   [Python and R] [BACKWARD INCOMPATIBILITY] `mlpack` is not used anymore.

*   [Python] [BACKWARD INCOMPATIBILITY] Seeking approximate near-neighbours
    with `nmslib` is no longer supported directly (the package has not been
    updated for a while).

*   [Python] `MSTClusterMixin(BaseEstimator, ClusterMixin)`: A base class for
    Genie, GIc, and other MST-based clustering algorithms.

*   [Python] [BACKWARD INCOMPATIBILITY] `Genie` and `GIc`: `affinity` was
    renamed `matrix`.


## 1.1.6 (2024-08-22)

*   [Python] The package now works with `numpy` 2.0.


## 1.1.5 (2023-10-18)

*   [BACKWARD INCOMPATIBILITY] [Python and R] Inequality measures
    are no longer referred to as inequity measures.

*   [BACKWARD INCOMPATIBILITY] [Python and R]
    Some external cluster validity measures were renamed:
    `adjusted_asymmetric_accuracy` -> `normalized_clustering_accuracy`,
    `normalized_accuracy` -> `normalized_pivoted_accuracy`.

*   [BACKWARD INCOMPATIBILITY] [Python] `compare_partitions2` has been removed,
    as `compare_partitions` and other partition similarity scores
    now support both pairs of label vectors `(x, y)` and confusion matrices
    `(x=C, y=None)`.

*   [Python and R] New parameter to `pair_sets_index`: `clipped`.

*   In `normalizing_permutation` and external cluster validity measures,
    the input matrices can now be of the type `double`.

*   [BUGFIX] [Python] #80: Fixed adjustment for `nmslib_n_neighbors`
    in small samples.

*   [BUGFIX] [Python] #82: `cluster_validity` submodule not imported.

*   [BUGFIX] Some external cluster validity measures